--- a/Web/Dockerfile
+++ b/Web/Dockerfile
@@ -2,5 +2,6 @@ FROM microsoft/aspnetcore:2.0
 ARG source
 WORKDIR /app
 EXPOSE 80
+ENV ASPNETCORE_URLS http://+:80
 COPY ${source:-obj/Docker/publish} .
 ENTRYPOINT ["dotnet", "Web.dll"]
